app/assets/stylesheets/lexxy-editor.css
@import url("lexxy-variables.css");

:where(lexxy-editor) {
  --lexxy-editor-padding: 1ch;
  --lexxy-editor-rows: 8lh;
  @supports (min-block-size: attr(rows lh)) {
    --lexxy-editor-rows: attr(rows lh, 8lh);
  }

  --lexxy-toolbar-gap: 2px;

  border: 1px solid var(--lexxy-color-ink-lighter);
  border-radius: calc(var(--lexxy-radius) + var(--lexxy-toolbar-gap));
  background-color: var(--lexxy-color-canvas);
  display: block;
  overflow: visible;
  position: relative;
  transition: opacity 150ms;

  input,
  button,
  summary {
    &:focus-visible {
      outline: var(--lexxy-focus-ring-size) solid var(--lexxy-focus-ring-color);
      outline-offset: var(--lexxy-focus-ring-offset);
    }
  }

  button,
  summary {
    -webkit-appearance: none;
    appearance: none;
    background: var(--lexxy-color-canvas);
    border: none;
    border-radius: var(--lexxy-radius);
    cursor: pointer;
    font-size: inherit;
    inline-size: auto;
    padding: 0;

    @media(any-hover: hover) {
      &:hover:not([aria-disabled="true"]) {
        background: var(--lexxy-color-ink-lightest);
      }
    }
  }

  .node--selected {
    &:has(img) img,
    &:not(:has(img)) {
      outline: var(--lexxy-focus-ring-size) solid var(--lexxy-focus-ring-color);
      outline-offset: var(--lexxy-focus-ring-offset);
    }
  }

  table {
    th, td {
      &.table-cell--selected {
        background-color: var(--lexxy-color-table-cell-selected-bg);
      }

      &.lexxy-content__table-cell--selected {
        background-color: var(--lexxy-color-table-cell-selected-bg);
        border-color: var(--lexxy-color-table-cell-selected-border);
      }
    }
 
    &.lexxy-content__table--selection {
      ::selection {
        background: transparent;
      }
    }
  }

  action-text-attachment {
    cursor: pointer;
  }
}

/* Placeholder */
:where(.lexxy-editor--empty) {
  .lexxy-editor__content:not(:has(ul, ol))::before {
    content: attr(placeholder);
    color: currentColor;
    cursor: text;
    opacity: 0.66;
    pointer-events: none;
    position: absolute;
    white-space: pre-line;
  }
}

:where(.lexxy-editor__content) {
  min-block-size: var(--lexxy-editor-rows);
  outline: 0;
  padding: var(--lexxy-editor-padding);
}

:where(.lexxy-editor--drag-over) {
  background-color: var(--lexxy-color-selected);
  border-radius: var(--lexxy-radius);
  outline: 2px dashed var(--lexxy-color-selected-dark);
}

/* Toolbar
/* -------------------------------------------------------------------------- */

:where(lexxy-toolbar) {
  --lexxy-toolbar-icon-size: 1em;

  border-block-end: 1px solid var(--lexxy-color-ink-lighter);
  color: currentColor;
  display: flex;
  font-size: inherit;
  gap: var(--lexxy-toolbar-gap);
  max-inline-size: 100%;
  padding: 2px;
  position: relative;

  &[data-attachments="false"] button[name="upload"]{
    display: none;
  }
}

:where(.lexxy-editor__toolbar-button) {
  aspect-ratio: 1;
  block-size: 2lh;
  color: currentColor;
  display: grid;
  place-items: center;

  &:is(:active):not([aria-disabled="true"]),
  &[aria-pressed="true"] {
    background-color: var(--lexxy-color-selected);

    &:hover {
      background-color: var(--lexxy-color-selected-hover);
    }
  }

  &[aria-disabled="true"] {
    cursor: default;
    opacity: 0.3;
  }

  svg {
    -webkit-touch-callout: none;
    block-size: var(--lexxy-toolbar-icon-size);
    fill: currentColor;
    grid-area: 1/1;
    inline-size: var(--lexxy-toolbar-icon-size);
    user-select: none;
  }
}

:where(.lexxy-editor__toolbar-spacer) {
  flex: 1;
}

/* Make sure spacer is only displayed if there's another button before it */
* + :where(.lexxy-editor__toolbar-spacer) {
  min-inline-size: 1lh;
}

:where(.lexxy-editor__toolbar-overflow) {
  display: none;
  justify-self: flex-end;
  position: relative;
  z-index: 1;

  summary {
    list-style: none;

    &::-webkit-details-marker {
      display: none;
    }

    [open] & {
      background-color: var(--lexxy-color-ink-lightest);
    }
  }
}

:where(.lexxy-editor__toolbar-overflow-menu) {
  background-color: var(--lexxy-color-canvas);
  border-radius: calc(var(--lexxy-radius) + var(--lexxy-toolbar-gap));
  box-shadow: var(--lexxy-shadow);
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: var(--lexxy-toolbar-gap);
  inset-inline-end: 0;
  padding: var(--lexxy-toolbar-gap);
  position: absolute;

  .lexxy-editor__toolbar-spacer {
    display: none;
  }

  * + .lexxy-editor__toolbar-spacer + button {
    margin-left: 0.5lh;
  }
}

/* Dropdowns
/* -------------------------------------------------------------------------- */

:where(.lexxy-editor__toolbar-dropdown) {
  position: relative;
  user-select: none;
  -webkit-user-select: none;

  :where(.lexxy-editor__toolbar-dropdown-content) {
    --dropdown-padding: 1ch;
    --dropdown-gap: calc(var(--dropdown-padding) / 2);

    background-color: var(--lexxy-color-canvas);
    border: 2px solid var(--lexxy-color-selected-hover);
    border-radius: var(--lexxy-radius);
    border-start-start-radius: 0;
    box-sizing: border-box;
    color: var(--lexxy-color-ink);
    display: flex;
    gap: var(--dropdown-gap);
    inset-block-start: 2lh;
    inset-inline-start: 0;
    max-inline-size: 40ch;
    margin: 0;
    padding: var(--dropdown-padding);
    position: absolute;
    z-index: 3;
  }

  &:is([open]) .lexxy-editor__toolbar-button {
    background-color: var(--lexxy-color-selected-hover);
    border-end-end-radius: 0;
    border-end-start-radius: 0;

    &:hover {
      background-color: var(--lexxy-color-selected-hover);
    }
  }
  
  [overflowing] & {
    position: static;

    .lexxy-editor__toolbar-dropdown-content {
      --dropdown-padding: 0.5ch;
      inset-inline-end: var(--dropdown-padding);
      inset-inline-start: var(--dropdown-padding);
    }
  }
}
/* ... */

